# fungi

./: README.md  nodes.json  pyproject.toml
fungi/: app.py  main.py  network.py  node.py
fungi/client/: Dockerfile  app.py  client.py  launcher.py  udp.py
fungi/models/: node.py
fungi/server/: .env_example  Dockerfile  api.py  docker-compose.yml  entrypoint.sh  launcher.py  requirements.txt  service.py
fungi/server/scripts/linux/: build.sh  deploy.sh  launch.sh
fungi/server/scripts/macos/: build.sh  deploy.sh  launch.sh
fungi/server/scripts/windows/: build.ps1  deploy.ps1  launch.ps1
fungi/tools/: async_stun.py  constants.py  utils.py
