[tool.poetry]
name = "fungi"
version = "0.1.0"
description = "A simple educational P2P project demonstrating the principles of peer-to-peer connectivity and decentralized networking"
authors = ["victor <victorgoubet@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"


pystun3 = "^2.0.0"
gradio = "^4.37.2"
redis = "^5.1.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
launch-fungi = "fungi.client.app:main"